--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.2.0"
   }
